add validtor class 03/19 11.37 AM

--- a/2015-03-11/EFTesting/ITRACKERP.csproj
+++ b/2015-03-11/EFTesting/ITRACKERP.csproj
@@ -103,6 +103,7 @@
     <Compile Include="UI\frmStyleMaster.Designer.cs">
       <DependentUpon>frmStyleMaster.cs</DependentUpon>
     </Compile>
+    <Compile Include="Validation\Validator.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
