--- a/2015-03-11/EFTesting/ITRACKERP.csproj
+++ b/2015-03-11/EFTesting/ITRACKERP.csproj
@@ -71,6 +71,18 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StyleVM.cs" />
+    <Compile Include="UI\EmployeeMaster.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\EmployeeMaster.Designer.cs">
+      <DependentUpon>EmployeeMaster.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\frmAward.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmAward.Designer.cs">
+      <DependentUpon>frmAward.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\frmBuyer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +113,12 @@
     <Compile Include="UI\frmStyleMaster.Designer.cs">
       <DependentUpon>frmStyleMaster.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\frmPromotion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmPromotion.Designer.cs">
+      <DependentUpon>frmPromotion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Validation\Validator.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -116,6 +134,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\EmployeeMaster.resx">
+      <DependentUpon>EmployeeMaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmAward.resx">
+      <DependentUpon>frmAward.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\frmBuyer.resx">
       <DependentUpon>frmBuyer.cs</DependentUpon>
     </EmbeddedResource>
@@ -130,6 +154,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frmStyleMaster.resx">
       <DependentUpon>frmStyleMaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmPromotion.resx">
+      <DependentUpon>frmPromotion.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
