--- a/2015-03-11/ITRACK.models/ITRACK.models.csproj
+++ b/2015-03-11/ITRACK.models/ITRACK.models.csproj
@@ -68,6 +68,7 @@
     <Compile Include="ItrackContextInitializer.cs" />
     <Compile Include="NestedExpression.cs" />
     <Compile Include="OperationPool.cs" />
+    <Compile Include="OprationBarcodes.cs" />
     <Compile Include="PartDefinition.cs" />
     <Compile Include="PastEmployeement.cs" />
     <Compile Include="Promotion.cs" />
