--- a/2015-03-11/ITRACK.models/ITRACK.models.csproj
+++ b/2015-03-11/ITRACK.models/ITRACK.models.csproj
@@ -77,6 +77,7 @@
     <Compile Include="PurchaseOrderItems.cs" />
     <Compile Include="Rack.cs" />
     <Compile Include="SketchDefinition.cs" />
+    <Compile Include="SqlBulkCopy.cs" />
     <Compile Include="Style.cs" />
     <Compile Include="StyleOperation.cs" />
     <Compile Include="User.cs" />
