--- a/2015-03-11/EFTesting/ITRACKERP.csproj
+++ b/2015-03-11/EFTesting/ITRACKERP.csproj
@@ -169,6 +169,12 @@
     <Compile Include="UI\frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\frmOparationScaning.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmOparationScaning.Designer.cs">
+      <DependentUpon>frmOparationScaning.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\frmOperation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -275,6 +281,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmOparationScaning.resx">
+      <DependentUpon>frmOparationScaning.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frmOperation.resx">
       <DependentUpon>frmOperation.cs</DependentUpon>
