--- a/2015-03-11/EFTesting/ITRACKERP.csproj
+++ b/2015-03-11/EFTesting/ITRACKERP.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\clsProductionSummary.cs" />
     <Compile Include="Reports\Dataset\BundleTicket.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -193,6 +194,12 @@
     <Compile Include="UI\frmPrintBarcode.Designer.cs">
       <DependentUpon>frmPrintBarcode.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\frmProduction.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmProduction.Designer.cs">
+      <DependentUpon>frmProduction.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\frmPurchaseOrder.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -293,6 +300,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frmPrintBarcode.resx">
       <DependentUpon>frmPrintBarcode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmProduction.resx">
+      <DependentUpon>frmProduction.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frmPurchaseOrder.resx">
       <DependentUpon>frmPurchaseOrder.cs</DependentUpon>
